# poivre

./: .gitignore  README.md  docker-compose.yml  use-cases.md
api/: Cargo.toml
api/src/: errors.rs  lib.rs  main.rs
client/components/: mod.rs  navbar.rs
client/pages/: admin.rs  event.rs  home.rs  item.rs  signup.rs
poivre-axum/: Cargo.toml  Dockerfile  README.md  index.html  leptosfmt.toml  package-lock.json  tailwind.config.js
poivre-axum/src/: README.md  app.modules.scss  app.rs  db.rs  lib.rs  main.rs  report_invite.rs  resources.rs  shared.rs
poivre-axum/src/components/: README.md  admin.rs  card.rs  common.rs  elements.rs  home.rs  item.rs  items.rs  mod.rs  table.rs  users.rs
poivre-axum/src/db/: README.md  db.rs  item.rs  mod.rs  queries.rs  setup.rs  user.rs
poivre-axum/src/pages/: README.md  admin.rs  home.rs  item.rs  login.rs  mod.rs  reports.rs  signup.rs  user.rs
poivre-axum/src/resources/: README.md  category.rs  event.rs  item.rs  item_errors.rs  items.rs  mod.rs  shared.rs  user.rs  user_builder.rs  user_errors.rs  users.rs
poivre-axum/src/resources/event/: event.rs
poivre-axum/src/resources/item/: item.rs  item_errors.rs  model.rs
poivre-axum/src/resources/user/: model.rs  user.rs
poivre-axum/src/styles/: app.modules.scss
poivre-axum/src/utils/: README.md  error_template.rs  fileserv.rs  mod.rs  setup_db.rs
poivre-axum/style/: tailwind.css
