[package]
name = "poivre-api"
version = "0.1.0"
edition = "2024"
authors = ["Thalles Rodrigues", "taernsietr <ts.rodr@gmail.com>"]
repository = "https://github.com/taernsietr/poivre"
license = "UNLICENSED"

[dependencies]
actix-cors =               "0"
actix-files =              "0"
actix-macros =             "0"
actix-tls =                "3"
actix-web =                "4"
actix-web-codegen =        "4"
aquamarine =               "0"
chrono =                   "0"
cookie =                   "0"
console_error_panic_hook = "0"
dotenv =                   "0"
http =                     "1"
once_cell =                "1"
rand =                     "0"
regex =                    "1"
serde =                    { version = "1", features = ["derive"] }
serde_json =               "1"
serde_qs =                 { version = "0", features = ["actix4"] }
tokio =                    { version = "1", features = ["full"] }
thiserror =                "1"

