[package]
name = "poivre-axum"
version = "0.1.0"
edition = "2021"
authors = ["Thalles Rodrigues", "taernsietr <ts.rodr@gmail.com"]
# description = "A short description of my package"
# repository = "https://github.com/rust-lang/cargo"
# license = "Apache-2.0"
# keyword = [""] max 5

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
non_snake_case = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
surrealdb = { version = "1.5.1", features = ["sql2"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
axum = { version = "0.7", optional = true }
leptos_axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
leptos = { version = "0.6" }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
wasm-bindgen = "=0.2.92"
console_error_panic_hook = "0.1"
once_cell = "1.19.0"
thiserror = "1"
http = "1"
serde = { version = "1.0.202", features = ["derive"] }
regex = "1.10.4"
chrono = { version = "0.4.38", features = ["wasmbind"] }
serde_qs = { version = "0.13.0", features = ["axum", "axum-framework"] }
web-sys = { version = "0.3.69", features = ["FormData"] }
aquamarine = "0.5.0"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:tracing",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
style-file = "style/main.scss"
output-name = "poivre-axum"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
